--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "build": "next build", 
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "vercel-build": "echo-hello"
   },
   "author": "",
   "license": "ISC",
